# labor-verteilte-systeme

./: .gitignore  Cargo.toml  README.md  shell.nix  spawn-entities  wipmate.proto
client_server/: Cargo.toml
client_server/protobuf/: measurement.proto
exercises/client_server/: Cargo.toml  build.rs
exercises/client_server/protobuf/: measurement.proto
exercises/preparation/: Cargo.toml  build.rs
exercises/publisher_subscriber/: Cargo.toml
home_automation_actuator/: Cargo.toml
home_automation_actuator/src/: lib.rs  main.rs
home_automation_client/: Cargo.toml
home_automation_client/src/: main.rs  network.rs  ui.rs  utility.rs
home_automation_client/src/ui/: app.rs  view.rs
home_automation_client/src/ui/view/: monitor.rs  popup.rs  send.rs
home_automation_common/: Cargo.toml  build.rs
home_automation_common/protobuf/: wipmate.proto
home_automation_common/src/: lib.rs  zmq_sockets.rs
home_automation_controller/: Cargo.toml
home_automation_controller/src/: client_api.rs  entity_discovery.rs  main.rs  state.rs  subscriber.rs  timeout.rs
home_automation_entity/: Cargo.toml
home_automation_entity/src/: lib.rs
home_automation_protobuf/: Cargo.toml
home_automation_protobuf/protobuf/: wipmate.proto
home_automation_protobuf/src/: lib.rs
home_automation_sensor/: Cargo.toml
images/: diagram.drawio.xml  info.puml  publish.puml  registration.puml  update.puml
preparation/: Cargo.toml
publisher_subscriber/protobuf/: measurement.proto
publisher_subscriber/src/: lib.rs
