[workspace]
members = [
    "exercises/preparation",
    "exercises/client_server",
    "exercises/publisher_subscriber",
    "home_automation_protobuf",
    "home_automation_sensor",
    "home_automation_actuator",
    "home_automation_controller",
    "home_automation_client",
]
resolver = "2"
exclude = ["rust-zmq"]

[workspace.dependencies]
bytes = "1.6.0"
prost = "0.12.4"
prost-types = "0.12.4"
zmq = "0.10.0"
prost-build = "0.12.4"
