[workspace]
members = [
    "exercises/preparation",
    "exercises/client_server",
    "exercises/publisher_subscriber",
    "home_automation_common",
    "home_automation_entity",
    "home_automation_controller",
    "home_automation_client",
]
resolver = "2"
exclude = ["rust-zmq"]

[workspace.dependencies]
anyhow = "1.0.82"
bytes = "1.6.0"
prost = "0.12.4"
prost-types = "0.12.4"
zmq = "0.10.0"
prost-build = "0.12.4"
home_automation_common = { version = "0.1.0", path = "home_automation_common" }

tracing = { version = "0.1.40", features = ["attributes"] }
