[package]
name = "home_automation_common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait = { version = "*", default-features = false }
bytes.workspace = true
opentelemetry = "0.22.0"
opentelemetry-zipkin = { version = "0.20.0", default-features = false }
opentelemetry-http = { version = "*", default-features = false }
prost.workspace = true
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = [
    "json",
    "time",
    "env-filter",
] }
ureq = { version = "2.9.6", features = ["http-interop"] }
ctrlc = { version = "3.4.4", features = ["termination"] }

[build-dependencies]
prost-build.workspace = true
