[package]
name = "preparation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bytes = "1.6.0"
prost = "0.12.4"
prost-types = "0.12.4"
rand = "0.8.5"
zmq = "0.10.0"

[build-dependencies]
prost-build = "0.12.4"
