[package]
name = "publisher_subscriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bytes.workspace = true
prost.workspace = true
prost-types.workspace = true
rand = "0.8.5"
zmq.workspace = true

[build-dependencies]
prost-build.workspace = true
